edit footer layout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,6 +37,7 @@ header{
 
 .jumbotron{
   background-color:#e7fee0;
+  margin-bottom:100px;
 }
 
 .btn-primary{
@@ -96,6 +97,7 @@ header{
 
     .f-list{
       list-style:none;
+      display:inline-block;
     }
   }
 }
