--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,8 @@
 <footer class="fixed-bottom">
   <ul>
-    <li class="f-list"><%= link_to 'Twitter','#' %></li>
-    <li class="f-list"><%= link_to 'Facebook','#' %></li>
-    <li class="f-list"><%= link_to 'Instagram','#' %></li>
-    <li class="f-list"><%= link_to 'Naryshiki',root_path %></li>
+    <li class="f-list"><%= link_to 'Twitter','#',class:'nav-link' %></li>
+    <li class="f-list"><%= link_to 'Facebook','#',class:'nav-link' %></li>
+    <li class="f-list"><%= link_to 'Instagram','#',class:'nav-link' %></li>
+    <li class="f-list"><%= link_to 'Naryshiki',root_path,class:'nav-link' %></li>
   </ul>
 </footer>
