rails g model User && rails g controller Users && validates

--- a/app/views/basic_pages/home.html.erb
+++ b/app/views/basic_pages/home.html.erb
@@ -3,7 +3,7 @@
     <span>なりしきは今すぐ成式会社の</span><br>
     <span>社長になれるアプリ</span>
   </h1>
-  <%= link_to '社長になる', "#", class: 'btn btn-lg btn-primary btn-main'%>
+  <%= link_to '社長になる', signup_path, class: 'btn btn-lg btn-primary btn-main'%>
   <p class="about_text">
     副業を始めたい<br>
     面白いことを始めたい<br>
