change favicon && topicon && about_icon

--- a/app/views/basic_pages/home.html.erb
+++ b/app/views/basic_pages/home.html.erb
@@ -23,7 +23,7 @@
     </article>
     <article class="column">
       <div class="column_img">
-        <%= image_tag 'icon_koban.png', size: '66x66' %>
+        <%= image_tag 'icon_naryshiki.png', size: '66x66' %>
         <h2 class="column_title"><strong>１成は１円として</strong></h2>
         <p class="column_text">成を稼ぐことも<br>成で投資することも<br>成を調達することも</p>
       </div>
