--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header>
   <nav class="navbar navbar-expand fixed-top">
-    <%= link_to root_path, id: 'logo' do %><%= image_tag 'narishiki.png', size: '180x50' %><% end %>
+    <%= link_to root_path, id: 'logo-icon' do %><%= image_tag 'topicon_naryshiki.png', size: '250x100' %><% end %>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item"><%= link_to "Home", root_path, class: "nav-link" %></li>
       <li class="nav-item"><%= link_to "Github", "https://github.com/nonress/naryshiki", class: "nav-link" %></li>
