--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,5 @@
 <% provide(:title, @user.name) %>
-<div id="user">
-  <%= gravatar_for @user %>
+<div class="users-show">
+  <div class="gravatar"><%= gravatar_for @user %></div>
   <p>成式会社 <%= @user.coname %> 代表取締役 <%= @user.name %></p>
-  <span>nani</span>
 </div>
