--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -64,3 +64,20 @@ strong{
 .btn-main{
   margin-top:60px;
 }
+
+.form-control{
+  margin-bottom:20px;
+}
+#error_explanation {
+  color: red;
+  ul {
+    color: red;
+    margin: 0 0 30px 0;
+  }
+}
+//error
+.field_with_errors {
+  input {
+    @extend .is-invalid;
+  }
+}
