could change users/show

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,7 +12,7 @@
         <%= f.label :email, "メールアドレス" %>
         <%= f.text_field :email, class:'form-control' %>
 
-        <%= f.label :coname, "成式会社名" %>
+        <%= f.label :coname, "成式会社名 (好きな社名を決めてください。後から変更は不可です。)" %>
         <%= f.text_field :coname, class:'form-control' %>
 
         <%= f.label :password, "パスワード" %>
