gem add rails-controller-testing

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
     <%= link_to root_path, id: 'logo-icon' do %><%= image_tag 'topicon_naryshiki.png', size: '250x100' %><% end %>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item"><%= link_to "Home", root_path, class: "nav-link" %></li>
-      <li class="nav-item"><%= link_to "Login", "#", class: "nav-link" %></li>
+      <li class="nav-item"><%= link_to "Login", login_path, class: "nav-link" %></li>
     </ul>
   </nav>
 </header>
