change class users-show => form-template

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title,'signup')%>
-<div class="users-show">
+<div class="form-template">
   <h1 class="center">新規登録</h1>
 
   <div class= "form-group">
