--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, @user.name) %>
-<div class="users-show">
+<div class="form-template">
   <div class="gravatar"><%= gravatar_for @user %></div>
   <p>成式会社 <%= @user.coname %> 代表取締役 <%= @user.name %></p>
 </div>
