--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,6 @@
  *= require_tree .
  *= require_self
  */
-@import 'bootstrap';
 
 @mixin box_sizing {
   -moz-box-sizing:    border-box;
@@ -79,6 +78,6 @@ strong{
 
 .field_with_errors {
   input{
-    @extend .is-invalid;
+    //@extend .is-invalid;
   }
 }
