--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title,'signup')%>
+<div class="center jumbotron">
 <div class="form-template">
   <h1 class="center">新規登録</h1>
 
@@ -29,3 +30,4 @@
     <input type="checkbox" class="form-check-input" id="exampleCheck1">
     <label class="form-check-label" for="exampleCheck1">Check me out</label>
   </div>
+</div>
