--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,7 @@
           </li>
         </li>
       <% else %>
-        <li class="nav-item"><%= link_to "Log in", login_path, class: "nav-link" %></li>
+        <li class="nav-item"><%= link_to "ログイン", login_path, class: "nav-link" %></li>
       <% end %>
     </ul>
   </nav>
