--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,8 +8,8 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">Account<b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li class='nav-item'><%= link_to 'プロフィール',current_user , class:'nav-link' %></li>
-              <li class='nav-item'><%= link_to '設定', "#", class:'nav-link' %></li>
+              <li class='nav-item'><%= link_to 'プロフィール',current_user, class:'nav-link' %></li>
+              <li class='nav-item'><%= link_to '設定', edit_user_path(current_user), class:'nav-link' %></li>
               <li class="divider"></li>
               <li class='nav-item'><%= link_to 'ログアウト', logout_path, class:'nav-link',method: :delete %></li>
             </ul>
