--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
     <ul class="navbar-nav ml-auto">
       <li class="nav-item"><%= link_to "Home", root_path, class: "nav-link" %></li>
       <% if logged_in? %>
-        <li class='nav-item'><%= link_to 'Users', "#", class:'nav-link' %></li>
+        <li class='nav-item'><%= link_to 'Users', users_path, class:'nav-link' %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">Account<b class="caret"></b></a>
             <ul class="dropdown-menu">
