add password resets

--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,5 +1,7 @@
-<h1>User#password_reset</h1>
+<h1>パスワード再設定</h1>
 
-<p>
-  <%= @greeting %>, find me in app/views/user_mailer/password_reset.html.erb
-</p>
+<p>成式会社 <%= @user.coname %> 代表取締役 <%= @user.name %> 樣,</p>
+
+<p>パスワードの再設定を下記のリンクより進めてください。</p>
+
+<%= link_to "Password Reset", edit_password_reset_url(@user.reset_token, email: @user.email) %>
