--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -4,7 +4,7 @@
     <h1 class="center">パスワードの再設定</h1>
 
     <div class= "form-group">
-        <%= form_for(@user) do |f| %>
+        <%= form_for(@user, url: password_reset_path(params[:id])) do |f| %>
           <%= render 'shared/error_messages'%>
 
           <%= hidden_field_tag :email, @user.email %>
