--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -4,12 +4,18 @@
     margin-right:10px;
   }
 
+  article{
+    padding:10px 0;
+  }
+
   p{
     float:left;
   }
+
   h1{
     padding-bottom: 50px;
   }
+
   .btn{
     width:100%;
   }
@@ -37,5 +43,12 @@
   em{
     padding:5px
   }
-}
 
+  .place-holder{
+    float:left;
+  }
+
+  .microposts-count{
+    float:left;
+  }
+}
