--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,7 +5,7 @@
 
     <div class= "form-group">
         <%= form_for(@user) do |f| %>
-          <%= render 'shared/error_messages'%>
+          <%= render 'shared/error_messages', object: f.object %>
 
           <%= f.label :name,"アカウント名" %>
           <%= f.text_field :name, class:' form-control' %>
