--- a/app/assets/stylesheets/microposts.scss
+++ b/app/assets/stylesheets/microposts.scss
@@ -3,7 +3,7 @@
 .microposts {
   list-style: none;
   padding: 0;
-  clear:left;
+  clear:left
   li {
     padding: 10px 0;
     border-top: 1px solid #e8e8e8;
@@ -44,4 +44,21 @@ span.picture {
   input {
     border: 0;
   }
+}
+
+.form-control-plaintext{
+  width:500px;
+}
+
+.my-icon{
+  float:left;
+  padding-right:20px;
+}
+
+.microposts-var{
+  padding-top:10px;
+}
+
+.image-filed{
+  display:none;
 }
