--- a/app/views/layouts/_loggedin.html.erb
+++ b/app/views/layouts/_loggedin.html.erb
@@ -1,9 +1,6 @@
-    <section class="user_info">
-      <%= render 'shared/user_info' %>
-    </section>
+    <section class="feedarea-microposts">
+      <%= render 'shared/microposts-feedarea' %>
   </aside>
-  <section class="micropost_form">
-      <%= render 'shared/micropost_form' %>
     </section>
   <div class="col-md-8">
     <%= render 'shared/feed' %>
