--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,7 +39,8 @@ a{
   }
 }
 
-.padding-top{
+
+.pt80{
   padding-top:80px;
 }
 
@@ -56,9 +57,8 @@ strong{
 //main
 
 .jumbotron{
-  padding-top: 130px;
   background-color: #e7fee0;
-  margin-bottom:100px;
+  margin:130px 0 100px 0;
 }
 
 .btn-primary{
