--- a/app/views/layouts/_loggedin.html.erb
+++ b/app/views/layouts/_loggedin.html.erb
@@ -1,6 +1,5 @@
-    <section class="feedarea-microposts">
-      <%= render 'shared/microposts-feedarea' %>
-  </aside>
-    </section>
-  <div class="col-md-8">
-    <%= render 'shared/feed' %>
+<div class="pt80">
+  <section class="feedarea-microposts">
+    <%= render 'shared/microposts-feedarea' %>
+  </section>
+  <%= render 'shared/feed' %>
