--- a/app/assets/stylesheets/microposts.scss
+++ b/app/assets/stylesheets/microposts.scss
@@ -3,13 +3,14 @@
 .microposts {
   list-style: none;
   padding: 0;
-  clear:left
+  clear:left;
+
   li {
     padding: 10px 0;
-    border-top: 1px solid #e8e8e8;
+    border-top: 2px solid #e8e8e8;
   }
   .user {
-    margin-top: 5em;
+    margin-top: 10em;
     padding-top: 0;
   }
   .content {
@@ -62,3 +63,9 @@ span.picture {
 .image-filed{
   display:none;
 }
+
+.fa-images{
+  cursor:pointer;
+  padding: 0 20px 0 450px;
+}
+
