--- a/app/views/layouts/_default.html.erb
+++ b/app/views/layouts/_default.html.erb
@@ -2,6 +2,7 @@
 <%= csp_meta_tag %>
 <%= favicon_link_tag('icon_naryshiki.png')%>
 
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
 <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 <%= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
