--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -1,6 +1,9 @@
-<% if @feed_items.any? %>
-  <ol class="microposts">
-    <%= render @feed_items %>
-  </ol>
-  <%= will_paginate @feed_items %>
-<% end %>
+  <% if @feed_items.any? %>
+    <div class="col-md-8">
+      <ol class="microposts">
+        <%= render @feed_items %>
+      </ol>
+    </div>
+    <%= will_paginate @feed_items %>
+  <% end %>
+</div>
