--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,9 @@
       <% flash.each do |message_type, message| %>
         <div class="alert alert-<%= message_type %>"> <%= message %></div>
       <% end %>
+      <div class="pt80">
         <%= yield %>
+      </div>
       <%= render 'layouts/footer'%>
       <%= debug(params) if Rails.env.development? %>
     </div>
