--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -1,7 +1,7 @@
-.fixed-bottom{
+.bottom{
   ul{
     float:right;
-    margin: 0 20px 20px 0;
+    margin: 0 0 20px 0;
 
     .f-list{
       list-style:none;
