--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="fixed-bottom">
+<footer class="bottom">
   <ul>
     <li class="f-list"><%= link_to 'Twitter','#',class:'nav-link' %></li>
     <li class="f-list"><%= link_to 'Facebook','#',class:'nav-link' %></li>
