--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,17 +44,25 @@ a{
   padding-top:80px;
 }
 
+.pt30{
+  padding-top:30px;
+}
+
 .center{
   text-align:center;
   h1{
     margin-bottom:10px;
   }
 }
+
 strong{
   border-bottom:solid 4px rgb(22,116,76);
 }
 
 //main
+h1{
+  padding-bottom:30px;
+}
 
 .jumbotron{
   background-color: #e7fee0;
@@ -64,6 +72,7 @@ strong{
 .btn-primary{
   background-color:green;
   border:none;
+  margin-top:30px;
   &:hover{
     background-color:#2cba04;
   }
