--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,6 +4,7 @@
     <%= link_to root_path, id: 'logo-icon' do %><%= image_tag 'icon_naryshiki.png', size: '40x40' %><% end %>
     <ul class="navbar-nav ml-auto">
       <li class='nav-item'><%= link_to 'Users', users_path, class:'nav-link' %></li>
+      <li class='nav-item'><%= link_to 'Works', work_posts_path, class:'nav-link' %></li>
         <li class="dropdown">
         <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">Account<b class="caret"></b></a>
           <ul class="dropdown-menu">
