rails actin_text:install && default_scope in work_post model

--- a/app/assets/stylesheets/work_posts.scss
+++ b/app/assets/stylesheets/work_posts.scss
@@ -19,11 +19,12 @@
   width:900px;
 }
 
-.workpost-area{
-  width:900px;
-  height:700px;
-  margin-top:30px;
-  display:inline;
+.workpost-field-nari{
+  width:200px;
+}
+
+#work_post_body{
+  height: 600px;
 }
 
 .label{
