--- a/app/views/work_posts/show.html.erb
+++ b/app/views/work_posts/show.html.erb
@@ -4,9 +4,13 @@
   <h1 class="center">案件詳細</h1>
   <div class="workposts">
     <h2>案件名:<%= @workpost.title %></h2>
+    カテゴリー:<% @workpost.categories.each do |category| %>
+      <%= category.name %>
+    <% end %>
     <h4 class="pt30">発注: 成式会社 <%= link_to @workpost.user.coname %></h4>
     案件詳細:<br><%= @workpost.body %>
     <h5 class="pt30">求めるスキル:<%= @workpost.skill %></h5>
     <h4 class="pt30">報酬: <%= @workpost.reward %>成</h4>
   </div>
+  <div class="center">案件一覧へ<%= link_to '戻る', work_posts_path %></div>
 </div>
